# helm

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  NEWS  README  README.md  changelog  configure.ac  glitch_bitch.jucer  helm.jucer  install-fedora.sh  make_package.py  twytch.jucer
Factory Presets/: LICENSE
VST3_SDK/: CMakeLists.txt  README.md  index.html
VST3_SDK/base/: CMakeLists.txt  LICENSE.txt
VST3_SDK/base/source/: baseiids.cpp  classfactoryhelpers.h  fbuffer.cpp  fbuffer.h  fcleanup.h  fcommandline.h  fdebug.cpp  fdebug.h  fdynlib.cpp  fdynlib.h  flock.cpp  flock.h  fobject.cpp  fobject.h  fstdmethods.h  fstreamer.cpp  fstreamer.h  fstring.cpp  fstring.h  hexbinary.h  timer.cpp  timer.h  updatehandler.cpp  updatehandler.h
VST3_SDK/cmake/modules/: AddVST3Library.cmake  Bundle.cmake  ExportedSymbols.cmake  Global.cmake  PlatformIOS.cmake  PrefixHeader.cmake
VST3_SDK/pluginterfaces/: LICENSE.txt
VST3_SDK/pluginterfaces/base/: falignpop.h  falignpush.h  fplatform.h  fstrdefs.h  ftypes.h  funknown.cpp  funknown.h  fvariant.h  geoconstants.h  ierrorcontext.h  ipluginbase.h  keycodes.h  pluginbasefwd.h  smartpointer.h  ucolorspec.h  ustring.cpp
VST3_SDK/pluginterfaces/gui/: iplugview.h  iplugviewcontentscalesupport.h
VST3_SDK/pluginterfaces/test/: itest.h
VST3_SDK/pluginterfaces/vst/: ivstattributes.h  ivstaudioprocessor.h  ivstautomationstate.h  ivstchannelcontextinfo.h  ivstcomponent.h  ivstcontextmenu.h  ivsteditcontroller.h  ivstevents.h  ivsthostapplication.h  ivstinterappaudio.h  ivstmessage.h  ivstmidicontrollers.h  ivstnoteexpression.h  ivstparameterchanges.h  ivstplugview.h  ivstprefetchablesupport.h  ivstprocesscontext.h  ivstrepresentation.h  ivstunits.h  vstpresetkeys.h  vsttypes.h
VST3_SDK/public.sdk/: CMakeLists.txt
VST3_SDK/public.sdk/source/: vst3stdsdk.cpp
src/: Makefile.am  alias.cpp  alias.h  arpeggiator.cpp  arpeggiator.h  bipolar_look_and_feel.cpp  bipolar_look_and_feel.h  bit_crush.cpp  bit_crush.h  bypass_router.cpp  bypass_router.h  circular_queue.h  common.h  delay.cpp  delay.h  distortion.cpp  distortion.h  envelope.cpp  envelope.h  feedback.cpp  feedback.h  filter.cpp  filter.h  formant.cpp  formant.h  formant_manager.cpp  formant_manager.h  ladder_filter.cpp  ladder_filter.h  laf.h  linear_slope.cpp  linear_slope.h  magnitude_lookup.cpp  magnitude_lookup.h  main.cpp  memory.cpp  memory.h  midi_lookup.cpp  midi_lookup.h  modulation_look_and_feel.cpp  (+75 more)
src/common/: border_bounds_constrainer.cpp  border_bounds_constrainer.h  file_list_box_model.cpp  file_list_box_model.h  helm_common.cpp  helm_common.h  load_save.cpp  load_save.h  midi_manager.cpp  midi_manager.h  startup.cpp  startup.h  synth_base.cpp  synth_base.h  synth_gui_interface.cpp  synth_gui_interface.h  twytch_common.cpp  twytch_common.h  twytch_load_save.cpp  twytch_load_save.h
src/editor_components/: audio_viewer.cpp  audio_viewer.h  bpm_slider.cpp  bpm_slider.h  envelope_section.h  feedback_section.cpp  filter_response.cpp  filter_response.h  filter_section.cpp  filter_selector.cpp  filter_selector.h  formant_response.cpp  formant_response.h  full_interface.cpp  full_interface.h  global_tool_tip.cpp  global_tool_tip.h  graphical_envelope.cpp  graphical_envelope.h  graphical_step_sequencer.cpp  graphical_step_sequencer.h  lfo_section.cpp  lfo_section.h  midi_keyboard.cpp  midi_keyboard.h  modulation_button.cpp  modulation_button.h  modulation_destination.cpp  modulation_destination.h  modulation_highlight.cpp  modulation_highlight.h  modulation_manager.cpp  modulation_manager.h  modulation_meter.cpp  modulation_meter.h  modulation_slider.cpp  modulation_slider.h  modulation_source.cpp  modulation_source.h  open_gl_background.cpp  (+57 more)
src/editor_sections/: about_section.cpp  about_section.h  arp_section.cpp  arp_section.h  articulation_section.cpp  articulation_section.h  bpm_section.cpp  bpm_section.h  contribute_section.cpp  contribute_section.h  delay_section.cpp  delay_section.h  delete_section.cpp  delete_section.h  distortion_section.cpp  distortion_section.h  dynamic_section.cpp  dynamic_section.h  envelope_section.cpp  envelope_section.h  extra_mod_section.cpp  extra_mod_section.h  feedback_section.cpp  feedback_section.h  filter_section.cpp  filter_section.h  formant_section.cpp  formant_section.h  formant_tuner.cpp  formant_tuner.h  full_interface.cpp  full_interface.h  lfo_section.cpp  lfo_section.h  mixer_section.cpp  mixer_section.h  modulation_manager.cpp  modulation_manager.h  noise_section.cpp  noise_section.h  (+28 more)
src/look_and_feel/: browser_look_and_feel.cpp  browser_look_and_feel.h  colors.cpp  colors.h  default_look_and_feel.cpp  default_look_and_feel.h  fonts.cpp  fonts.h  modulation_look_and_feel.cpp  modulation_look_and_feel.h  shaders.cpp  shaders.h  text_look_and_feel.cpp  text_look_and_feel.h  twytch_look_and_feel.cpp  twytch_look_and_feel.h
src/plugin/: helm_editor.cpp  helm_editor.h  helm_plugin.cpp  helm_plugin.h  twytch.cpp  twytch.h  twytch_editor.cpp  twytch_editor.h  twytch_plugin.cpp  twytch_plugin.h  value_bridge.h
src/standalone/: helm_computer_keyboard.cpp  helm_computer_keyboard.h  helm_editor.cpp  helm_editor.h  helm_standalone_editor.cpp  helm_standalone_editor.h  main.cpp  twytch_computer_keyboard.cpp  twytch_computer_keyboard.h  twytch_standalone_editor.cpp  twytch_standalone_editor.h
src/synthesis/: dc_filter.cpp  dc_filter.h  detune_lookup.cpp  detune_lookup.h  fixed_point_oscillator.cpp  fixed_point_oscillator.h  fixed_point_wave.cpp  fixed_point_wave.h  gate.cpp  gate.h  helm_engine.cpp  helm_engine.h  helm_lfo.cpp  helm_lfo.h  helm_module.cpp  helm_module.h  helm_oscillators.cpp  helm_oscillators.h  helm_voice_handler.cpp  helm_voice_handler.h  noise_oscillator.cpp  noise_oscillator.h  oscillator_feedback.cpp  oscillator_feedback.h  peak_meter.cpp  peak_meter.h  resonance_cancel.cpp  resonance_cancel.h  switch.cpp  switch.h  trigger_random.cpp  trigger_random.h  twytch_engine.cpp  twytch_engine.h  twytch_lfo.cpp  twytch_lfo.h  twytch_module.cpp  twytch_module.h  twytch_oscillators.cpp  twytch_oscillators.h  (+4 more)
(+1104 files in other folders)
