noinst_LIBRARIES = libmopo.a
libmopo_a_SOURCES = delay.cpp \
                    delay.h \
                    envelope.cpp \
                    envelope.h \
                    feedback.cpp \
                    feedback.h \
                    filter.cpp \
                    filter.h \
                    linear_slope.cpp \
                    linear_slope.h \
                    memory.h \
                    midi_lookup.cpp \
                    midi_lookup.h \
                    mono_panner.cpp \
                    mono_panner.h \
                    mopo.h \
                    operators.cpp \
                    operators.h \
                    oscillator.cpp \
                    oscillator.h \
                    processor.cpp \
                    processor.h \
                    processor_router.cpp \
                    processor_router.h \
                    send_receive.cpp \
                    send_receive.h \
                    smooth_filter.cpp \
                    smooth_filter.h \
                    smooth_value.cpp \
                    smooth_value.h \
                    step_generator.cpp \
                    step_generator.h \
                    tick_router.h \
                    trigger_operators.cpp \
                    trigger_operators.h \
                    value.cpp \
                    value.h \
                    utils.h \
                    voice_handler.cpp \
                    voice_handler.h \
                    wave.cpp \
                    wave.h
