noinst_LIBRARIES = libmopo.a
libmopo_a_SOURCES = alias.cpp \
                    alias.h \
                    arpeggiator.cpp \
                    arpeggiator.h \
                    bit_crush.cpp \
                    bit_crush.h \
                    bypass_router.cpp \
                    bypass_router.h \
                    common.h \
                    delay.cpp \
                    delay.h \
                    distortion.cpp \
                    distortion.h \
                    envelope.cpp \
                    envelope.h \
                    feedback.cpp \
                    feedback.h \
                    filter.cpp \
                    filter.h \
                    formant_manager.cpp \
                    formant_manager.h \
                    linear_slope.cpp \
                    linear_slope.h \
                    magnitude_lookup.cpp \
                    magnitude_lookup.h \
                    memory.cpp \
                    memory.h \
                    midi_lookup.cpp \
                    midi_lookup.h \
                    mono_panner.cpp \
                    mono_panner.h \
                    mopo.h \
                    note_handler.h \
                    operators.cpp \
                    operators.h \
                    oscillator.cpp \
                    oscillator.h \
                    phaser.cpp \
                    phaser.h \
                    portamento_slope.cpp \
                    portamento_slope.h \
                    processor.cpp \
                    processor.h \
                    processor_router.cpp \
                    processor_router.h \
                    resonance_lookup.cpp \
                    resonance_lookup.h \
										reverb.cpp \
										reverb.h \
										reverb_all_pass.cpp \
										reverb_all_pass.h \
										reverb_comb.cpp \
										reverb_comb.h \
                    simple_delay.cpp \
                    simple_delay.h \
                    smooth_filter.cpp \
                    smooth_filter.h \
                    smooth_value.cpp \
                    smooth_value.h \
                    step_generator.cpp \
                    step_generator.h \
                    stutter.cpp \
                    stutter.h \
                    tick_router.h \
                    trigger_operators.cpp \
                    trigger_operators.h \
                    value.cpp \
                    value.h \
                    utils.h \
                    voice_handler.cpp \
                    voice_handler.h \
                    wave.cpp \
                    wave.h
